--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ p{
 .attribution { 
     font-size: 11px; text-align: center;
     color: black;
+    margin:15px;
  }
 
 .attribution a { 
@@ -124,7 +125,7 @@ p{
     }
 
  }
- @media (max-width: 375px){
+ @media (max-width: 500px){
     .container{
         flex-direction: column;
 
